# openvibe-meta

./: .gitignore  AUTHORS.md  CHANGELOG.md  CMakeLists.txt  GUIDELINES.md  Jenkinsfile  README.md  build.cmd  build.sh  install_dependencies.cmd  install_dependencies.sh  jenkins-config.xml  launchvc.cmd  pack-release.sh  windows-init-env.cmd
CMake/: FindThirdPartyBoost.cmake  FindThirdPartyEigen.cmake  FindThirdPartyGTest.cmake  FindThirdPartyLua.cmake  FindThirdPartyTinyXML2.cmake  FindThirdPartyVRPN.cmake  OvInstallLaunchScript.cmake  Utilities.cmake
CMake/drivers/: FindThirdPartyBrainProductsAmplifierAPI.cmake
documentation/: CMakeLists.txt  Doxyfile-skeleton  DoxygenLayout.xml  License.md  Main-skeleton.md
external_projects/: CMakeLists.txt
external_projects/CMake/: Boost.cmake  Eigen.cmake  GTest.cmake  Lua.cmake  TinyXML2.cmake  VRPN.cmake
external_projects/patches/: LuaCMakeLists.txt  VRPNCMakeLists.patch  lua.patch
visual_gen/: OpenViBE-Meta.sln-tpl  designer-extras.vcxproj-tpl  generateVS.py  vcxproj.user-tpl
